--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="noindex, nofollow">
 <title>404 Page not found | Ioannis Karkalas</title>
 <meta name="keywords" content="">
-<meta name="description" content="This webpage represents my projects, skills and my newfound passion for game development">
+<meta name="description" content="This webpage illustrates my projects, skills and my newfound passion for game development">
 <meta name="author" content="Ioannis Karkalas">
 <link rel="canonical" href="http://localhost:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
@@ -109,6 +109,11 @@
             <li>
                 <a href="http://localhost:1313/projects/" title="Projects">
                     <span>Projects</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/games/" title="Games">
+                    <span>Games</span>
                 </a>
             </li>
         </ul>
