--- a/public/github-projects.html
+++ b/public/github-projects.html
@@ -37,7 +37,7 @@
                 </h1>
             </div>
             <p class="text-gray-400 text-lg">
-                Exploring code, building experiences, and solving problems
+                Exploring, building experiences, and solving problems.
             </p>
             <p class="text-gray-500 mt-2" id="repoCount">Loading repositories...</p>
         </div>
