--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <title>Ioannis Karkalas</title>
 
 <meta name="description" content="This webpage illustrates my projects, skills and my newfound passion for game development">
-<meta name="author" content="Ioannis Karkalas">
+<meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
