--- a/public/about/index.html
+++ b/public/about/index.html
@@ -19,7 +19,7 @@ Skills
 Languages: Python, C, C&#43;&#43;, JavaScript, C#, Java, Kotlin, NetLogo">
 <meta name="author" content="">
 <link rel="canonical" href="https://retr0sity.github.io/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.b127d93fd4c628b68e936c89a39e24e6fa622c104dec9fa0c8c840c8907219a5.css" integrity="sha256-sSfZP9TGKLaOk2yJo54k5vpiLBBN7J&#43;gyMhAyJByGaU=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://retr0sity.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://retr0sity.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://retr0sity.github.io/favicon-32x32.png">
@@ -219,7 +219,7 @@ Languages: Python, C, C&#43;&#43;, JavaScript, C#, Java, Kotlin, NetLogo">
 <p><strong>Business Intelligence</strong>: Power BI</p>
 <p><strong>Tools</strong>: Git, Visual Studio Code</p>
 <h2 id="currently">Currently<a hidden class="anchor" aria-hidden="true" href="#currently">#</a></h2>
-<p>🎮 Working on &ldquo;A Feather&rsquo;s Weight&rdquo;, check out the prototype on my Games page!
+<p>🎮 Working on &ldquo;A Feather&rsquo;s Weight&rdquo;, check out the prototype on my Games page!        <br>
 📚 Learning Dockers!<br>
 🔨 Starting my Computer Science and Engineering MSc!</p>
 <hr>
